--- a/FreeSpeech/res/layout/video.xml
+++ b/FreeSpeech/res/layout/video.xml
@@ -3,9 +3,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
-    <VideoView
-        android:id="@+id/videoView1"
+    <SurfaceView
+        android:id="@+id/surfaceView1"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
-
+    
 </FrameLayout>
