added listener method for file choose in main activity and passed it onto the method in the fragment

--- a/FreeSpeech/res/layout/file_transfer.xml
+++ b/FreeSpeech/res/layout/file_transfer.xml
@@ -19,6 +19,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignRight="@+id/helper"
         android:layout_below="@+id/textView1"
+        android:onClick="onClickChooseFile"
         android:text="@string/choose_file" />
 
     <Button
